# BIDUA_ERP

./: .gitignore  .replit  notes.md  pyproject.toml  replit.md  requirements.txt  sql_app.db
app/: main.py  testing.txt
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: accounts.py  auth.py  companies.py  employees.py  orders.py  products.py  users.py
app/core/: auth.py  config.py  database.py  middleware.py
app/crud/: __init__.py  accounts.py  base.py  companies.py  employees.py  orders.py  products.py  users.py
app/models/: models.py
app/schemas/: schemas.py
attached_assets/: pydantic_schemas_1758359373411.py  sqlalchemy_models_1758361938356.py
